--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,7 @@
 body {
 	background-color: #FAFAD2; 
 	margin: 0;
+	text-align: center;
 }
 
 header > h1	{
@@ -11,6 +12,9 @@ header > h1	{
 main > p	{
 	font-family: 'DM Sans', sans-serif;
 	font-weight: 300;
+	text-align: center;
+	padding-left: 15%;
+	padding-right: 15%;
 }
 
 @import url('https://fonts.googleapis.com/css?family=DM+Serif+Text: 250|Duru+Sans&display=swap');
@@ -18,6 +22,7 @@ main > p	{
 img	{
 	opacity: 0.5;
 	border-radius: 8px;
+	align-content: center;
 }
 
 img:hover	{
