--- a/mystyle.css
+++ b/mystyle.css
@@ -13,8 +13,8 @@ main > p	{
 	font-family: 'DM Sans', sans-serif;
 	font-weight: 300;
 	text-align: center;
-	padding-left: 15%;
-	padding-right: 15%;
+	padding-left: 13%;
+	padding-right: 13%;
 }
 
 @import url('https://fonts.googleapis.com/css?family=DM+Serif+Text: 250|Duru+Sans&display=swap');
@@ -78,5 +78,10 @@ h2 {
 	color: black;
 }
 
-
+video 	{
+	padding-left: 20%;
+	padding-right: 20%;
+	width: 100%;
+	height: 250px;
+}
 
