--- a/mystyle.css
+++ b/mystyle.css
@@ -1,8 +1,10 @@
 body {
 	background-color: #FAFAD2; 
-	margin: 0;
+	margin: 1%;
 	text-align: center;
+
 }
+
 
 header > h1	{
 	font-family: 'DM Sans', sans-serif;
@@ -13,8 +15,8 @@ main > p	{
 	font-family: 'DM Sans', sans-serif;
 	font-weight: 300;
 	text-align: center;
-	padding-left: 13%;
-	padding-right: 13%;
+	padding-left: 5%;
+	padding-right: 5%;
 }
 
 @import url('https://fonts.googleapis.com/css?family=DM+Serif+Text: 250|Duru+Sans&display=swap');
